<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/detail_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f1f1f1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#f1f1f1"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/moe_detail_page"
            android:textColor="#000000"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/detail_close"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="@drawable/close"
            android:clickable="true"
            android:onClick="onClickCloseBtn"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/detail_border"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/detail_top"
        android:background="#dedede" />

    <ImageView
        android:id="@+id/detail_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_border"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/moe_detail_image"
        android:src="@drawable/ic_launcher"
        android:visibility="gone" />

    <WebView
        android:id="@+id/detail_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detail_img"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/detail_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detail_webview"
        android:background="#ffffff"
        android:padding="5dp"
        android:text="@string/moe_detail_text"
        android:textColor="#555555"
        android:textSize="16sp" 
        android:visibility="gone"/>

</RelativeLayout>